<!-- 
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
 -->
<resources>

    <string name="publish_options">Opciones de publicación</string>
    <string name="subscribe_options">Opciones de suscripción</string>

    <string name="app_name">MQTT</string>
    <string name="menu_settings">Ajustes</string>
    <string name="server">Servidor</string>
    <string name="port">Puerto</string>
    <string name="connect">Conectar</string>

    <string name="newConnection">Nueva Conexión</string>
    <string name="newConnectionShort">+</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="title_activity_new_connection">Nueva Conexión</string>
    <string name="clientID">Cliente ID</string>
    <string name="connectedto">Conectado a</string>

    <string name="Disconnect">Desconectar</string>
    <string name="subscribe">Subscribir</string>
    <string name="publish">Publicar</string>
    <string name="title_activity_subscribe">Subscribir</string>
    <string name="disconnected">Desconectado de</string>
    <string name="topic">Topic</string>
    <string name="history">Historial</string>
    <string name="title_activity_history">Historial</string>
    <string name="subscribed">Subscrito a</string>
    <string name="no_status">Estado de conexión desconocido</string>
    <string name="connecting">Conectando a</string>
    <string name="disconnecting">Desconectando de</string>
    <string name="connectionError">Ha habido un error al conectar a</string>

    <string name="title_activity_publish">Publicar</string>
    <string name="message">Mensaje</string>
    <string name="qos0">0</string>
    <string name="qos1">1</string>
    <string name="qos2">2</string>
    <string name="empty"></string>
    <string name="qos">QOS</string>
    <string name="retained">Flag Retained</string>
    <string name="cleanSession">Flag Clean Session</string>
    <string name="advancedShort">Avanzado</string>
    <string name="title_activity_advanced">Avanzado</string>
    <string name="uname">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ssl">SSL</string>
    <string name="timeout">Time Out</string>
    <string name="keepalive">Keep Alive Timeout</string>

    <string name="title_activity_last_will">Mensaje Last Will</string>
    <string name="setLastWill">Configurar Mensaje Last Will</string>
    <string name="willMessage">Configurar Mensaje Last Will</string>
    <string name="willMessageShort">Last Will</string>
    <string name="notifyTitle">Mensaje MQTT Recibido</string>
    <string name="notifyTitle_connectionLost">Cliente MQTT ha perdido la conexión</string>

    <string name="save">Guardar</string>
    <string name="title_activity_connection_details">Detalles de conexión</string>
    <string name="startLogging">Activar Logs</string>
    <string name="endLogging">Desactivar Logs</string>
	<string name="missingOptions">Cliente ID, dirección o pueto de servidor no se han rellenado</string>
   
    <string name='dateFormat'>dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="unkown_error">Error Desconocido</string>
    <string name="delete">Borrar Conexión</string>
    <string name="disconnectClient">Desconectar Cliente?</string>
    <string name="deleteDialog">El cliente seleccionado está conectado o conectándose, si se borra la conexión, causará su desconexión</string>
    <string name="continueBtn">Continuar</string>
    <string name="cancelBtn">Cancelar</string>
    
    <!-- Strings that need formatting  -->
    <string name="messageRecieved">Mensaje recibido %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s ha recibido %2$s del topic %3$s</string>
    <string name="toast_pub_success">Mensaje pubicado: %1$s al topic: %2$s</string>
    <string name="toast_sub_success">Subscrito a %1$s</string>
    <string name="toast_disconnected">Desconectado</string>
    <string name="toast_pub_failed">Error al publicar mensaje: %1$s al topic: %2$s</string>
    <string name="toast_sub_failed">Error al subscribirse a %1$s</string>
    <string name="connection_lost">%1$s perdió la conexión a %2$s</string>
    <string name="client_connected">Cliente conectado con éxito</string>
    
    <!-- Hints -->
    <string name="serverURIHint">mosquitto.test.com</string>
    <string name="portHint">1884</string>
    <string name="contentDescriptionSSL">Activar SSL</string>
    <string name="contentDescriptionCleanSession">Clean Session</string>
    <string name="topicHint">hola</string>
    <string name="messageHint">Hola Mundo</string>
    <string name="unameHint">Usuario</string>
    <string name="passwordHint">Contraseña</string>
    <string name="timeoutHint">60</string>
    <string name="keepaliveHint">200</string>
    <string name="sslKeyLocaltion">file://</string>
    <string name="select">Abrir</string>
    <string name="about_tittle">Acerca de</string>
    <string name="about">Esta aplicación ha sido desarrollada con el objetivo de analizar el protocolo de comunicación
    MQTT, un sistema basado en arquitectura publish/subscribe, en el cual diferentes clientes MQTT se comunican entre
    si publicando mensajes a un broker externo y subscribiendose a diferentes topis para recibir información.\n\n
    El funcionamiento de la aplicación es el siguiente:\n
    *Para interactuar con el broker es necesario crear una conexión.\n
    *Una vez creada, el siguiente paso es conectarse con el broker.\n
    *Una vez establecida la conexión, es posible publicar mensajes a un topic específico y subscribirse a varios topics.\n
    *Al subscribirse a un topic, los mensajes que se reciban se reflejarán en el historial de la conexión, así como se creará
        una notificación para avisar al usuario.\n
    *Para finalizar una conexión, se puede desconectar o eliminar de la aplicación.\n
    </string>
    <string name="disable_admin">Desactivar administrador</string>
    <string name="enable_admin">Activar administrador</string>
    <string name="admin_device">En esta actividad se permite configurar la aplicación para convertirla en administrador del dispositivo y poder realizar acciones como bloquear la pantalla, configurar contraseñas de acceso, etc</string>


</resources>
