<!--
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
-->
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/usernameGroup"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uname"/>

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/unameHint"
            android:inputType="text"
             >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/usernameGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sslGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordGroup"
        android:orientation="vertical"
        android:layout_marginTop="25dp" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssl"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="60dip" />

        <CheckBox
            android:id="@+id/sslCheckBox"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sslKeyLocaltion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/sslKeyLocaltion"
            android:inputType="text" > 

        </EditText>

        <Button
            android:id="@+id/sslKeyBut"
            style="?android:attr/buttonStyleSmall"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeoutGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/sslGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout"/>

        <EditText
            android:id="@+id/timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/timeoutHint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keepaliveGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/timeoutGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keepalive" />

        <EditText
            android:id="@+id/keepalive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/keepaliveHint"
            android:inputType="number" />
    </LinearLayout>

</RelativeLayout>
</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2">


<Button
    android:id="@+id/ok"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/save"
    />

<Button
    android:id="@+id/setLastWill"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/willMessageShort"
    />
    </LinearLayout>

</RelativeLayout>

