<?xml version="1.0" encoding="utf-8"?>
<!--?xml version="1.0" encoding="utf-8"?-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_device"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnEnable"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_admin"
        android:background="@color/light_purple"
        android:textColor="@color/main_white"/>

    <Button
        android:id="@+id/btnDisable"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_admin"
        android:background="@color/light_purple"
        android:textColor="@color/main_white"/>
    </LinearLayout>

</LinearLayout>