<?xml version="1.0" encoding="utf-8"?>
<!-- 
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_white"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:ignore="Overdraw">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
    app:theme="@style/Toolbar"/>

<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_below="@id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".ClientConnections"/>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingButtonActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:menu_fab_size="normal"
        app:menu_showShadow="true"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_animationDelayPerItem="50"
        app:menu_icon="@drawable/fab_add"
        app:menu_buttonSpacing="0dp"
        app:menu_labels_margin="0dp"
        app:menu_labels_showAnimation="@anim/jump_from_down"
        app:menu_labels_hideAnimation="@anim/jump_to_down"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_padding="8dp"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_labels_cornerRadius="3dp"
        app:menu_colorNormal="@color/purple"
        app:menu_colorPressed="@color/light_purple"
        app:menu_colorRipple="@color/light_purple"
        app:menu_labels_singleLine="false"
        app:menu_labels_ellipsize="none"
        app:menu_labels_maxLines="-1"
        app:menu_labels_style="@style/MenuLabelsStyle"
        app:menu_labels_position="left"
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/endLogging"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuButtonsSmall"
            android:layout_above="@+id/requestLocationFloatingButton"
            android:src="@drawable/historial"
            app:fab_label="@string/endLogging"
            app:fab_size="normal"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/startLogging"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_above="@+id/myLocationFloatingButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuButtonsSmall"
            android:src="@drawable/historial"
            app:fab_label="@string/startLogging"
            app:fab_size="normal"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/newConnection"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuButtonsSmall"
            android:src="@drawable/new_connection"
            app:fab_label="@string/newConnection"
            app:fab_size="normal"
            />

    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>